<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adv.newsnotification.SettingFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/setting_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_setting"
            android:textSize="30dp"
            android:background="#484747"
            android:gravity="center|center_horizontal"
            android:padding="15dp" />

        <LinearLayout
            android:layout_below="@+id/setting_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:text="@string/category_news"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:text="@string/category_political"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:text="@string/category_technology"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:text="@string/category_entertainment"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:text="@string/category_education"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:text="@string/category_criminal"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:text="@string/category_sport"
                    android:textSize="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    android:text="@string/category_social"
                    android:textSize="20dp" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
